# auto_dj_script

./: .gitignore  .hypercode-session.json  .hypercode_startup_marker  .tormentnexus_startup_marker  1200_micrograms_mix_rekordbox.xml  1200_micrograms_mix_tracklist.txt  Dockerfile  README.md  ajja_mix_rekordbox.xml  ajja_mix_tracklist.txt  astrix_mix_rekordbox.xml  astrix_mix_tracklist.txt  auto_dj.py  avalon_mix_rekordbox.xml  avalon_mix_tracklist.txt  classic_psytrance_mix_rekordbox.xml  classic_psytrance_mix_tracklist.txt  config.py  convert_to_mp3.py  cosmosis_mix_rekordbox.xml  cosmosis_mix_tracklist.txt  docker-compose.yml  electric_universe_mix_rekordbox.xml  electric_universe_mix_tracklist.txt  final_dj_master_rekordbox.xml  final_dj_master_test_tracklist.txt  final_dj_master_tracklist.txt  gms_family_mix_rekordbox.xml  gms_family_mix_tracklist.txt  koxbox_mix_rekordbox.xml  koxbox_mix_tracklist.txt  mad_tribe_mix_rekordbox.xml  mad_tribe_mix_tracklist.txt  make_artist_mixes.py  mekkanikka_mix_rekordbox.xml  mekkanikka_mix_tracklist.txt  mix_all_artists.sh  modern_psytrance_mix_rekordbox.xml  modern_psytrance_mix_tracklist.txt  outsiders_mix_rekordbox.xml  (+17 more)
.pi/: taskplane.json
.pi-lens/: change-log.jsonl  code-quality-warnings.jsonl  turn-state.json  worklog.jsonl
Documentation/: AGENTS.md  CHANGELOG.md  DEPLOY.md  DESIGN.md  GLOBAL_LLM_DIRECTIVE.md  HANDOFF.md  IDEAS.md  LIB_VERSIONS.md  MANUAL.md  MEMORY.md  RECOVERY.md  ROADMAP.md  ROBUSTNESS.md  STRUCTURE.md  TODO.md  VISION.md
Model Instructions/: AGENTS.md  CLAUDE.md  GEMINI.md  GPT.md  copilot-instructions.md
autodj/: __init__.py  analysis.py  autoscaler.py  cli.py  cluster.py  core.py  dsp.py  gui.py  midi.py  models.py  monitoring.py  np_signal.py  plugins.py  scheduling.py  utils.py  version.py
logs/: .c849654dea4b478b851841eee45472f436021ea4-audit.json  scheduler.json
templates/: index.html
tests/: test_dsp.py  (+7 more)
(+3048 files in other folders)
